# spectro

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main.py
env/conda-meta/: _libgcc_mutex-0.1-main.json  _openmp_mutex-5.1-1_gnu.json  blas-1.0-mkl.json  bzip2-1.0.8-h5eee18b_6.json  ca-certificates-2025.4.26-hbd8a1cb_0.json  history  intel-openmp-2023.1.0-hdb19cb5_46306.json  ld_impl_linux-64-2.40-h12ee557_0.json  libffi-3.4.4-h6a678d5_1.json  libgcc-ng-11.2.0-h1234567_1.json  libgomp-11.2.0-h1234567_1.json  libstdcxx-ng-13.2.0-hc0a3c3a_7.json  libuuid-1.41.5-h5eee18b_0.json  mkl-2023.1.0-h213fc3f_46344.json  mkl-service-2.4.0-py311h5eee18b_2.json  mkl_fft-1.3.11-py311h5eee18b_0.json  mkl_random-1.2.8-py311ha02d727_0.json  ncurses-6.4-h6a678d5_0.json  numpy-2.0.1-py311h08b1b3b_1.json  numpy-base-2.0.1-py311hf175353_1.json  openssl-3.0.16-h5eee18b_0.json  pip-25.1-pyhc872135_2.json  python-3.11.11-he870216_0.json  readline-8.2-h5eee18b_0.json  setuptools-78.1.1-py311h06a4308_0.json  sqlite-3.45.3-h5eee18b_0.json  tbb-2021.8.0-hdb19cb5_0.json  tk-8.6.14-h39e8969_0.json  tzdata-2025b-h04d1e81_0.json  wheel-0.45.1-py311h06a4308_0.json  xz-5.6.4-h5eee18b_1.json  zlib-1.2.13-h5eee18b_1.json
env/etc/: aau_token
env/lib/: libtinfow.so.6.4  tclConfig.sh  tkConfig.sh
env/lib/itcl4.2.4/: itclConfig.sh
env/lib/pkgconfig/: formw.pc  history.pc  libcrypto.pc  libffi.pc  liblzma.pc  libssl.pc  menuw.pc  ncurses++w.pc  ncursesw.pc  openssl.pc  panelw.pc  python-3.11-embed.pc  python-3.11.pc  readline.pc  sqlite3.pc  tcl.pc  tinfow.pc  tk.pc  uuid.pc  zlib.pc
(+157 files in other folders)
